--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,7 @@
               class="PC"
               [ngClass]="{ elemento__procesador__activo: pcIsActive }"
             >
+            {{pcIsActive}}
               PC
               <br />
               {{ PC + 1 }}
@@ -33,6 +34,7 @@
               class="MAR"
               [ngClass]="{ elemento__procesador__activo: marIsActive }"
             >
+            {{marIsActive}}
               MAR
               <br />
               {{ MAR + 1 }}
