--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,108 +1,149 @@
-body {
-  width: 100vw;
+::ng-deep {
+  .mat-mdc-form-field-subscript-wrapper {
+    display: none;
+  }
+}
+
+.container {
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-header {
-  border-bottom: solid 1px black;
-  padding: 10px;
-}
-
-textarea {
-  height: 520px !important;
-}
-
-.container__body {
-  border: solid 1px black;
-  width: 90%;
-  height: 90%;
-}
-
-.header__button {
-  margin-right: 8px;
-}
-
-.container__body__principal {
-  width: 100%;
-  height: 90%;
+.computer-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.container__body__principal__input {
-  width: 20%;
+  width: 100%;
   height: 100%;
+  padding: 12px;
 }
 
-.container__body__principal__card {
-  width: 20%;
+.code {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100%;
-  padding: 15px;
-  background: rgb(245, 245, 245);
+  width: 20%;
+
+  .code-screen {
+    height: 80%;
+    border: 8px solid black;
+    border-radius: 10px;
+    width: 300px;
+  }
 }
 
-.container__body__principal__center__first-container {
+.cpu-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  border: 2px solid black;
+  height: 80%;
+  width: 30%;
+}
+
+.pc-container {
+  width: 100%;
+  height: 10%;
   display: flex;
   justify-content: space-between;
+  padding: 24px;
+
+  .count-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid black;
+    width: 100px;
+    height: 100px;
+    border-radius: 4px;
+  }
 }
 
-.container__body__principal__center,
-.container__body__principal__buses {
-  height: 100%;
+.uc-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  margin: 8px;
+  height: 100px;
+  border: 3px solid black;
+}
+
+.alu-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45%;
+  margin: 8px;
+  height: 100px;
+  border: 3px solid black;
+}
+
+.mbr-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 45%;
+  margin: 8px;
+  height: 100px;
+  border: 3px solid black;
+}
+
+.ir-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 45%;
+  margin: 8px;
+  height: 100px;
+  border: 3px solid black;
+}
+
+.registers {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid black;
+  width: 80%;
+  padding: 20px;
+}
+
+.memory-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 80%;
+  width: 20%;
+  border: 4px solid black;
+}
+
+.bus-container {
+  display: flex;
+  justify-content: center;;
+  flex-direction: column;
+  gap: 30px;
   width: 25%;
 }
 
-.PC,
-.MAR {
-  height: 20px;
-  width: 20px;
-  border: solid 1px black;
-  padding: 20px;
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-}
-
-.container__body__principal__buses {
-  display: flex;
-  justify-content: space-around;
-  height: 100%;
-}
-
-.bus_name {
-  width: 60px;
-}
-
-.directions,
+.address,
 .data,
 .control {
-  height: 92%;
-  border: solid 1px black;
-  width: 60px;
-  margin: 5px;
-}
-
-.container__body__principal__center__UC,
-.container__body__principal__center__ALU,
-.container__body__principal__center__MBR,
-.container__body__principal__center__IR,
-.container__body__principal__center__AG {
-  flex: 1;
-  margin: 3px;
+  height: 50px;
+  border: 2px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
-}
-
-.container__body__principal__center__down {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  width: 100%;
 }
 
 .elemento__procesador__activo {
