--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -129,7 +129,7 @@
 
 .bus-container {
   display: flex;
-  justify-content: center;;
+  justify-content: center;
   flex-direction: column;
   gap: 30px;
   width: 25%;
@@ -146,7 +146,19 @@
   width: 100%;
 }
 
+.actions-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  gap: 10px
+}
+
+.memory-title { 
+  margin-bottom: 20px;
+  border-bottom: 2px solid black;
+}
+
 .elemento__procesador__activo {
-  border: 2px solid #e58080;
-  box-shadow: 0px 0px 11px 0px #fa2626;
+  border: 2px solid rgb(133, 128, 229);
+  box-shadow: 0px 0px 30px 0px #0f4ce6;
 }
