--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -158,6 +158,18 @@
   border-bottom: 2px solid black;
 }
 
+.screen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+  background-color: white;
+  border: 2px solid black;
+  border: 2px solid rgb(229, 145, 128);
+  box-shadow: 0px 0px 30px 0px #e60f0f;
+}
+
 .elemento__procesador__activo {
   border: 2px solid rgb(133, 128, 229);
   box-shadow: 0px 0px 30px 0px #0f4ce6;
